--- a/WebApp.Shop/app/public/index.html
+++ b/WebApp.Shop/app/public/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/css/styles.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/input-pack.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/nav-menu.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/fontawesome/all.min.css" />
   <link rel="stylesheet" href="http://localhost:5220/staticdirectories/src/root/web_modal/Web_Modal.css" />
   <title>React App</title>
 
