--- a/WebApp.Shop/app/public/index.html
+++ b/WebApp.Shop/app/public/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/css/nav-menu.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/fontawesome/all.min.css" />
   <link rel="stylesheet" href="http://localhost:5220/staticdirectories/src/root/web_modal/Web_Modal.css" />
+  <link rel="stylesheet" href="http://localhost:5220/staticdirectories/src/layout.css" />
   <title>React App</title>
 
 </head>
